--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
         <%#= render 'layouts/flash_notices' %>
         <div class= "row-fluid">
           <div class = "mainlogo">
-            <img src="assets/Perishably-logo.png" alt="Perishably" style="margin-left:-240px;" />
+            <img src="/assets/Perishably-logo.png" alt="Perishably" style="margin-left:-240px;" />
           </div>
         </div>
 
