--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -1,44 +1,46 @@
-
+<div class="products-panel">
 <h1>
   <i class="fa fa-plus small-i"></i>
-  <i class="fa fa-list-ol"></i> &nbsp;Add items to my list.
+  <i class="fa fa-list-ol"></i> &nbsp;ADD PRODUCT TO LIST
 </h1>
 
 <%= form_for(@user_product) do |f|%>
 
-    <div class = "products">
-        <%= f.label "Name:" %>
+    <div class = "products light well">
+      <h4 class="inverse">PRODUCT INFORMATION</h4>
+      <%= render "layouts/flash_notices" %>
+        <%= f.label :name, "PRODUCT" %>
       <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
 
-        <%= f.label :product_details %>
+        <%= f.label :product_details, "PRODUCT DETAILS" %>
         <%= f.text_field :product_details %>
 
-        <%= f.label :number_unit_of_time, "Num Time:" %>
+        <%= f.label :number_unit_of_time, "LENGTH OF TIME" %>
         <%= f.select(:number_unit_of_time, options_for_select(1..15)) %> 
 
-        <%= f.label :unit_of_time_period, "Unit of Time:" %>
+        <%= f.label :unit_of_time_period, "UNIT OF TIME" %>
         <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br> 
 
-        <%= f.label "Date of Expiration:" %>
+        <%= f.label :exp_date, "DATE OF EXPIRATION" %>
         <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
     		<%= f.text_field :exp_date , :id => "datepicker"%> 
 
-        <%= f.label "Storage:" %>
+        <%= f.label :storage, "STORAGE" %>
     	  <%= f.text_field :storage %>
     </div>
 
     <div class = "light well">
-  
-    <%= f.check_box(:email) %>
-    <%= f.label(:email, "Notify me by email") %>
+    <h4 class="inverse">PRODUCT NOTIFICATION</h4>
+      <%= f.check_box(:email) %>
+    <%= f.label(:email, "NOTIFY ME BY EMAIL") %>
 
     <%= f.check_box(:sms) %>
-    <%= f.label(:sms, "Notify me by text message") %>
+    <%= f.label(:sms, "NOTIFY ME BY TEXT") %>
 
     <%= radio_button_tag(:day_of?, "Default notification date", value="1") %>
-    <%= label_tag(:default_notification, "Notify me on the expiration date.") %>
+    <%= label_tag(:default_notification, "NOTIFY ME ON DATE OF EXPIRATION") %>
     <%= radio_button_tag(:day_of?, "Specific notification date") %>
-    <%= label_tag(:specific_notification, "Notify me before the expiration date.") %>
+    <%= label_tag(:specific_notification, "NOTIFY ME BEFORE DATE OF EXPIRATION") %>
     <div id="select_notification_date" style="display:none">
 <select id='notify_num' name='notify_num'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option></select><select id='notify_date_type' name='notify_date_type'><option value='Day(s)'>Day(s)</option><option value='Week(s)'>Week(s)</option><option value='Month(s)'>Month(s)</option><option value='Year(s)'>Year(s)</option></select>
   <input id="notification_date" name="user_added_product[notification_date]" /><br />
@@ -47,14 +49,14 @@
 
     <%#= link_to 'Add people to notifications', '#add_recipients',
           :onclick => 'add_ppl_to_notification()', id: "add_recipients" %>
-  <p id="add_recipients"> Add People to Notifications </p>
+  <p id="add_recipients" class="btn btn-info"><i class="fa fa-plus"></i> ADD NOTIFICATION RECIPIENTS </p>
  
   <div id="add_ppl">
   </div>
 </div>
 
-    <%= f.submit "Add Item", class: "btn btn-info round2" %>
+    <%= f.submit "ADD PRODUCT TO MY LIST", class: "btn btn-info round2" %>
 <% end %>
  
-<%= link_to "<i class='fa fa-times'></i> Cancel".html_safe, user_added_products_path, class: "btn btn-inverse round2" %>
-
+<%= link_to "<i class='fa fa-times'></i> CANCEL".html_safe, user_added_products_path, class: "btn btn-inverse round2" %>
+</div>
