--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,12 +25,20 @@
 /*-------------------------------------------*/
 /*---------------General App-----------------*/
 /*-------------------------------------------*/
-
+label{
+  color: #FFF;
+font-weight: normal;
+text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.2);
+}
 a.disabled {
    pointer-events: none;
    cursor: default;
 }
+div .panel{
+  height:100%;
+  position: relative;
 
+}
 div .panel-heading h1, div .row-fluid h1{
   text-align:left;
 
@@ -46,12 +54,18 @@ div .panel-body label{
   font-size: 10px;
 }
 
-input[type="text"], input[type="password"]{
+input[type="text"], input[type="password"],input[type="tel"]{
   border:1px solid #000;
+  width:200px;
+}
+.products select{
+   border:1px solid #000;
+  width:210px;
 }
 
 /*------------Flash Notice------------*/
 .notice{
   color:#f00;
+  padding-bottom: 5px;
 }
 /*------------------------------------*/
