--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -4,21 +4,24 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  border: solid 1px #999;
+  border: solid 1px #f1f1f1;
+  border-radius:5px;
   cursor: default;
   li {
     background-color: #FFF;
-    border-top: solid 1px #DDD;
+    border-top: solid 1px #f1f1f1;
     margin: 0;
     padding: 0;
-    a {
-      color: #000;
-      display: block;
-      padding: 3px;
-    }
-    a.ui-state-hover, a.ui-state-active {
-      background-color: #FFFCB2;
-    }
+    
+    
   }
 }
 
+ ul.ui-autocomplete .ui-menu-item{
+  padding:5px;
+}
+
+
+ ul.ui-autocomplete .ui-menu-item:hover{
+  background-color:#5bc0de;
+ }
