--- a/app/assets/stylesheets/user_added_products.css.scss
+++ b/app/assets/stylesheets/user_added_products.css.scss
@@ -7,22 +7,54 @@
 /*-----------"X" to the to add recipients box------------*/
 .remove{
   background-color:#000;
-  color:#f00;
+  color:#fff;
+  border-radius: 5px;
+  padding:2px;
+  text-align:center;
+  width:15px;
 }
 /*-------------------------------------------------------*/
 
 
-div .panel{
-  width:435px;
+div .products-panel{
+  width:600px;
   margin:0 auto;
   border-radius:5px;
   background-color:#fff;
   border:1px solid #a1a1a1;
-  padding:20px;
   overflow: auto;
+  padding: 20px;
+}
+div .products-panel h4{
+  color:#fff;
+  font-family: "Century Gothic", sans-serif;
+  padding:2px 2px 2px 10px;
+
+  border-radius:3px;
+  margin-bottom:10px;
+  background-color:#000;
+}
+div .each_product_info{
+  list-style: none;
+  margin:0;
+}
+
+.product_doe{
+  float:left;
+  margin-right:10px;
 }
 
 
 
-/*----gitshoes----*/
+.recipients-table{
+  width:100%;
+  text-align:center;
+}
+
+.recipients-table tr:first{
+  border-bottom:1px solid #a1a1a1;
+}
+
+
+
 
