--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,10 @@
                 <a class="brand main">Perishably</a>
                 <div class="nav-collapse collapse">
                   <ul class="nav pull-left">
-                    <li><a href ="#" class="disabled smooth">Logged in as <%= current_user.email %></a></li>
+                    <li><a href ="" class="disabled smooth">Logged in as <%= current_user.email %></a>
+
+                    <%#= link_to "Account", edit_user_path %>
+                    </li>
                   </ul>
                   <div class="pull-right">
                     <%= link_to "<i class='fa fa-sign-in'></i> &nbsp;Logout".html_safe, logout_path, class: "btn btn-info round2" %>
