--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -68,9 +68,9 @@
       <h4 class="inverse">NOTIFICATION RECIPIENTS</h4>
         <table class = "recipients-table">
           <tr>
-              <th>NAME</th>
-              <th>EMAIL</th>
-              <th>PHONE NUMBER</th>
+              <th><i class="fa fa-user"></i> NAME</th>
+              <th><i class="fa fa-envelope-o"></i> EMAIL</th>
+              <th><i class="fa fa-phone"></i> PHONE NUMBER</th>
               <th><i class="fa fa-edit"></i> EDIT</th>
               <th><i class="fa fa-trash-o"></i> DELETE</th>
             
