--- a/app/assets/stylesheets/user_added_products.css.scss
+++ b/app/assets/stylesheets/user_added_products.css.scss
@@ -68,14 +68,22 @@ div .each_product_info{
 .field-row{
   margin:0 auto;
   width:475px;
+  overflow: auto;
 }
 .field-row .field{
   float:left;
+  min-width:200px;
 }
 .field-first{
   margin-right: 50px;
+
 }
-.field label{
-  display: block;
-  clear:both;
+
+.field .clickbox{
+  float:left;
+  margin-right: 10px;
+}
+
+.field .field-single{
+  text-align:center;
 }
