--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -32,50 +32,74 @@
           <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br> 
         </div>
       </div>
-
-    <%= f.label :exp_date,"DATE OF EXPIRATION:" %>
-      <%= f.text_field :exp_date , :id => "datepicker"%> 
-    </i>
-
-    <%= f.label :storage, "STORAGE"%>
-    <%= f.text_field :storage%>
+      <div class="field-row">
+        <div class="field field-first">
+          <%= f.label :exp_date,"DATE OF EXPIRATION:" %>
+            <%= f.text_field :exp_date , :id => "datepicker"%> 
+          </i>
+        </div>
+        <div class= "field">
+          <%= f.label :storage, "STORAGE"%>
+          <%= f.text_field :storage%>
+        </div>
+      </div>
 
   </div>
 
-  <div class = "light well">
+  <div class = " products light well">
     <h4 class="inverse">PRODUCT NOTIFICATION</h4>
-    <%= f.check_box(:email) %>
-    <%= f.label(:email, "NOTIFY ME BY EMAIL") %>
 
-    <%= f.check_box(:sms) %>
-    <%= f.label(:sms, "NOTIFY ME BY TEXT") %>
-
-    <%= radio_button_tag(:day_of?, "Default notification date", value="1") %>
-    <%= label_tag(:default_notification, "Notify me on the expiration date.") %>
-
-    <%= radio_button_tag(:day_of?, "Specific notification date") %>
-    <%= label_tag(:specific_notification, "Notify me before the expiration date.") %>
-    
-    <div id="select_notification_date" style="display:none">
-      <select id='notify_num' name='notify_num'>
-        <option value='1'>1</option>
-        <option value='2'>2</option>
-        <option value='3'>3</option>
-        <option value='4'>4</option>
-        <option value='5'>5</option>
-        <option value='6'>6</option>
-        <option value='7'>7</option>
-      </select>
-
-      <select id='notify_date_type' name='notify_date_type'>
-        <option value='Day(s)'>Day(s)</option>
-        <option value='Week(s)'>Week(s)</option>
-        <option value='Month(s)'>Month(s)</option>
-        <option value='Year(s)'>Year(s)</option>
-      </select>
+    <div class="field-row">
+      <div class= "field field-first">
+        <%= f.check_box(:email, {class: "clickbox"}) %>
+        <%= f.label(:email, "NOTIFY ME BY EMAIL") %>
+      </div>
+      <div class="field">
+        <%= f.check_box(:sms, {class: "clickbox"}) %>
+        <%= f.label(:sms, "NOTIFY ME BY TEXT") %>
+      </div>
     </div>
-    <input id="notification_date" name="user_added_product[notification_date]" /><br />
-  </div>
+    
+    <div class="field-row">
+        <%= radio_button_tag(:day_of?, "Default notification date", value="1", {class: "clickbox"}) %>
+        <%= label_tag(:default_notification, "NOTIFY ON DATE OF EXPIRATION") %>
+    </div>
+      <div class="field-row">
+        <%= radio_button_tag(:day_of?, "Specific notification date", {class: "clickbox"}) %>
+        <%= label_tag(:specific_notification, "NOTIFY BEFORE DATE OF EXPIRATION") %>
+      </div>
+  
+    
+    <div class="field-row">
+    <div id="select_notification_date" style="display:none">
+      
+        <div class="field field-first">
+          <select id='notify_num' name='notify_num'>
+            <option value='1'>1</option>
+            <option value='2'>2</option>
+            <option value='3'>3</option>
+            <option value='4'>4</option>
+            <option value='5'>5</option>
+            <option value='6'>6</option>
+            <option value='7'>7</option>
+          </select>
+        </div>
+
+          <div class="field">
+            <select id='notify_date_type' name='notify_date_type'>
+              <option value='Day(s)'>Day(s)</option>
+              <option value='Week(s)'>Week(s)</option>
+              <option value='Month(s)'>Month(s)</option>
+              <option value='Year(s)'>Year(s)</option>
+            </select>
+        </div>
+      </div> 
+    </div>
+
+    <div class="field-row field-single">
+        <input id="notification_date" name="user_added_product[notification_date]" />
+    </div>
+
     <div class="light well">
       <h4 class="inverse">NOTIFICATION RECIPIENTS</h4>
         <table class = "recipients-table">
