--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -36,7 +36,6 @@
       <div class="field-row">
         <div class="field field-first">
           <%= f.label :exp_date, "DATE OF EXPIRATION" %>
-          <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
       		<%= f.text_field :exp_date , :id => "datepicker"%>
         </div> 
         
@@ -47,22 +46,35 @@
       </div>
     </div>
 
-    <div class = "light well">
+    <div class = "products light well">
     <h4 class="inverse">PRODUCT NOTIFICATION</h4>
-      <%= f.check_box(:email) %>
-    <%= f.label(:email, "NOTIFY ME BY EMAIL") %>
 
-    <%= f.check_box(:sms) %>
-    <%= f.label(:sms, "NOTIFY ME BY TEXT") %>
+    <div class="field-row">
+      <div class="field field-first">
+        <%= f.check_box(:email) %>
+        <%= f.label(:email, "NOTIFY ME BY EMAIL") %>
+      </div>
+      <div class="field">
+        <%= f.check_box(:sms) %>
+        <%= f.label(:sms, "NOTIFY ME BY TEXT") %>
+      </div>
+    </div>
+    <div class="field-row">
+      <div class="field field-first">
+        <%= radio_button_tag(:day_of?, "Default notification date", value="1",{class: "clickbox"}) %>
+        <%= label_tag(:default_notification, "NOTIFY ON DATE OF EXPIRATION",{class: "clickbox"}) %>
+      </div>
 
-    <%= radio_button_tag(:day_of?, "Default notification date", value="1") %>
-    <%= label_tag(:default_notification, "NOTIFY ON DATE OF EXPIRATION") %>
-    <%= radio_button_tag(:day_of?, "Specific notification date") %>
-    <%= label_tag(:specific_notification, "NOTIFY BEFORE DATE OF EXPIRATION") %>
-    <div id="select_notification_date" style="display:none">
-<select id='notify_num' name='notify_num'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option></select><select id='notify_date_type' name='notify_date_type'><option value='Day(s)'>Day(s)</option><option value='Week(s)'>Week(s)</option><option value='Month(s)'>Month(s)</option><option value='Year(s)'>Year(s)</option></select>
-  <input id="notification_date" name="user_added_product[notification_date]" /><br />
-<br>
+      <div class="field">
+        <%= radio_button_tag(:day_of?, "Specific notification date") %>
+        <%= label_tag(:specific_notification, "NOTIFY BEFORE DATE OF EXPIRATION") %>
+      </div>
+        <div id="select_notification_date" style="display:none">
+    
+        <select id='notify_num' name='notify_num'><option value='1'>1</option><option value='2'>2</option><option value='3'>3</option><option value='4'>4</option><option value='5'>5</option><option value='6'>6</option><option value='7'>7</option></select><select id='notify_date_type' name='notify_date_type'><option value='Day(s)'>Day(s)</option><option value='Week(s)'>Week(s)</option><option value='Month(s)'>Month(s)</option><option value='Year(s)'>Year(s)</option></select>
+         
+        <br>
+         <input id="notification_date" name="user_added_product[notification_date]" /><br />
 </div>
 
     <%#= link_to 'Add people to notifications', '#add_recipients',
@@ -72,7 +84,7 @@
   <div id="add_ppl">
   </div>
 </div>
-
+</div>
     <%= f.submit "ADD PRODUCT TO MY LIST", class: "btn btn-info round2" %>
 <% end %>
  
