fixed show class  in css

--- a/app/views/user_added_products/show.html.erb
+++ b/app/views/user_added_products/show.html.erb
@@ -4,7 +4,7 @@
 <h1><i class="fa fa-barcode"></i> <%= @user_product.name.upcase %> </h1>
 <div class ="light well">
     <%= render "layouts/flash_notices" %>
-    <h4 class="inverses">PRODUCT INFORMATION</h4>
+    <h4 class="inverse">PRODUCT INFORMATION</h4>
     
     <label>PRODUCT DETAILS:</label>
     <p><%= @user_product.product_details %></p>
