--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -99,6 +99,7 @@
     <div class="field-row field-single">
         <input id="notification_date" name="user_added_product[notification_date]" />
     </div>
+  </div>
 
     <div class="light well">
       <h4 class="inverse">NOTIFICATION RECIPIENTS</h4>
