final science css

--- a/app/views/user_added_products/edit.html.erb
+++ b/app/views/user_added_products/edit.html.erb
@@ -132,9 +132,12 @@
           </tr> 
         <% end %>
       </table>
-     <p id="add_recipients" class="btn btn-info"><i class="fa fa-plus"></i> ADD NOTIFICATION RECIPIENTS </p>
+
+      <div class="field-row">
+       <p id="add_recipients" class="btn btn-info"><i class="fa fa-plus"></i> ADD NOTIFICATION RECIPIENTS </p>
       <div id="add_ppl">
-    </div>
+      </div>
+      </div>
     </div>
 
 
